--- a/styles/UI/_btn.scss
+++ b/styles/UI/_btn.scss
@@ -34,6 +34,7 @@
       color: $black;
     }
     .btn__icon {
+      transform: rotate(45deg);
       path {
         stroke: $black;
       }
@@ -65,7 +66,11 @@
     height: 15px;
     position: relative;
     z-index: 4;
+    transition: $defaultTransitionTime;
     svg {
+      path {
+        transition: $defaultTransitionTime;
+      }
       width: 15px;
       height: 15px;
     }
