--- a/styles/UI/_header.scss
+++ b/styles/UI/_header.scss
@@ -27,23 +27,27 @@
     transition: $defaultTransitionTime cubic-bezier(0.62, 0.21, 0.905, 0.36);
     overflow: hidden;
     padding: 4px;
-    &::after {
-      content: '';
-      position: absolute;
-      left: -40px;
-      top: -40px;
-      margin: 0 auto;
-      width: 140px;
-      height: 140px;
-      background-color: $blue;
-      border-radius: 50%;
-      aspect-ratio: 1 / 1;
-      z-index: -1;
-      transform: scale(0);
-      transition: $defaultTransitionTime cubic-bezier(0.62, 0.21, 0.905, 0.36);
-    }
+    // &::after {
+    //   content: '';
+    //   position: absolute;
+    //   left: -40px;
+    //   top: -40px;
+    //   margin: 0 auto;
+    //   width: 140px;
+    //   height: 140px;
+    //   background-color: $blue;
+    //   border-radius: 50%;
+    //   aspect-ratio: 1 / 1;
+    //   z-index: -1;
+    //   transform: scale(0);
+    //   transition: $defaultTransitionTime cubic-bezier(0.62, 0.21, 0.905, 0.36);
+    // }
+    text-decoration: underline;
+    text-underline-position: under;
+    text-decoration-color: transparent;
     &:hover {
-      color: $white;
+      text-decoration-color: $blue;
+      // color: $white;
       .main-link__icon {
         transform: scale(1.3);
         path {
