--- a/styles/UI/_popup.scss
+++ b/styles/UI/_popup.scss
@@ -1,8 +1,8 @@
 .popup {
   margin: auto;
   width: 100%;
-  max-width: 824px;
-  padding: 90px 152px 92px;
+  max-width: 700px;
+  padding: 64px 32px 64px;
   border-radius: 24px;
   background: $black;
   visibility: hidden;
@@ -18,7 +18,8 @@
     left -57px bottom -18px, top 214px right 46px;
 
   &__heading {
-    max-width: 520px;
+    max-width: 540px;
+    margin: 0 auto;
     margin-bottom: 32px;
     color: $lt-grey;
     text-align: center;
