--- a/styles/pages/_item.scss
+++ b/styles/pages/_item.scss
@@ -615,13 +615,16 @@
   @media (max-width: 768px) {
     gap: 32px;
     &__item {
-      font-size: 24px;
+      font-size: 16px;
+      &::before {
+        font-size: 18px;
+      }
     }
   }
   @media (max-width: 568px) {
     gap: 24px;
     &__item {
-      font-size: 20px;
+      // font-size: 20px;
     }
   }
   @media (max-width: 375px) {
