--- a/styles/pages/_projects.scss
+++ b/styles/pages/_projects.scss
@@ -151,6 +151,39 @@
     display: none;
   }
 
+  &__heading {
+    color: $black;
+    font-family: $mainFont;
+    font-size: 42px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 110%; /* 46.2px */
+    letter-spacing: -0.84px;
+    margin-bottom: 60px;
+    margin-left: 318px;
+    @media (max-width: 1280px) {
+      margin-left: 0;
+      margin-bottom: 48px;
+    }
+    @media (max-width: 768px) {
+      font-size: 32px;
+      margin-bottom: 48px;
+    }
+    @media (max-width: 568px) {
+      font-size: 32px;
+      margin-bottom: 40px;
+    }
+    @media (max-width: 375px) {
+      margin-bottom: 32px;
+      font-size: 24px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: 100%; /* 24px */
+      letter-spacing: -0.48px;
+      text-transform: uppercase;
+    }
+  }
+
   @media (max-width: 1280px) {
     &__tab-list {
       margin: 0;
